--- a/crates/vue_oxc_toolkit/Cargo.toml
+++ b/crates/vue_oxc_toolkit/Cargo.toml
@@ -18,6 +18,7 @@ oxc_diagnostics = { workspace = true }
 oxc_parser = { workspace = true }
 oxc_semantic = { workspace = true }
 oxc_span = { workspace = true }
+oxc_syntax = { workspace = true }
 
 vue-compiler-core = { workspace = true }
 
