test: add codegen tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ insta = "1.46.0"
 oxc_allocator = "0.108.0"
 oxc_ast = "0.108.0"
 oxc_ast_visit = "0.108.0"
+oxc_codegen = "0.108.0"
 oxc_diagnostics = "0.108.0"
 oxc_parser = "0.108.0"
 oxc_semantic = "0.108.0"
