--- a/crates/vue_oxc_toolkit/Cargo.toml
+++ b/crates/vue_oxc_toolkit/Cargo.toml
@@ -24,6 +24,7 @@ vue-compiler-core = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
+oxc_codegen = { workspace = true }
 
 [lints]
 workspace = true
