chore: correct workspace metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
 categories = ["parsing", "parser-implementations"]
 keywords = ["Vue", "oxc"]
 license = "MIT"
-repository = "https://github.com/liangmiQwQ/vue-oxc-semantic"
-description = "Provide Semantic for the Vue-JSX transformed AST"
+repository = "https://github.com/liangmiQwQ/vue-oxc-toolkit"
+description = "A parser to generate semantically correct AST from .vue file. Good for linting integration"
 
 edition = "2024"
 rust-version = "1.91.1"
