--- a/crates/vue_oxc_toolkit/Cargo.toml
+++ b/crates/vue_oxc_toolkit/Cargo.toml
@@ -23,6 +23,7 @@ vue-compiler-core = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
+oxc_ast_visit = { workspace = true }
 oxc_codegen = { workspace = true }
 
 [lints]
