--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ insta = "1.46.0"
 
 oxc_allocator = "0.110.0"
 oxc_ast = "0.110.0"
+oxc_ast_visit = "0.110.0"
 oxc_codegen = "0.110.0"
 oxc_diagnostics = "0.110.0"
 oxc_parser = "0.110.0"
@@ -39,4 +40,5 @@ oxc_semantic = "0.110.0"
 oxc_span = "0.110.0"
 oxc_syntax = "0.110.0"
 
+regex = "1.12.2"
 vue-compiler-core = "0.1.0"
