--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,15 +30,15 @@ too_many_lines = { level = "allow" }
 [workspace.dependencies]
 insta = "1.46.3"
 
-oxc_allocator = "0.112.0"
-oxc_ast = "0.112.0"
-oxc_ast_visit = "0.112.0"
-oxc_codegen = "0.112.0"
-oxc_diagnostics = "0.112.0"
-oxc_parser = "0.112.0"
-oxc_semantic = "0.112.0"
-oxc_span = "0.112.0"
-oxc_syntax = "0.112.0"
+oxc_allocator = ">=0.112.0"
+oxc_ast = ">=0.112.0"
+oxc_ast_visit = ">=0.112.0"
+oxc_codegen = ">=0.112.0"
+oxc_diagnostics = ">=0.112.0"
+oxc_parser = ">=0.112.0"
+oxc_semantic = ">=0.112.0"
+oxc_span = ">=0.112.0"
+oxc_syntax = ">=0.112.0"
 
 memchr = "2.7.6"
 regex = "1.12.3"
