--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,10 @@ cast_possible_truncation = { level = "allow" }
 too_many_lines = { level = "allow" }
 
 [workspace.dependencies]
+criterion = "0.8.2"
 insta = "1.46.3"
+
+vue_oxc_toolkit = { path = "crates/vue_oxc_toolkit" }
 
 oxc_allocator = ">=0.112.0"
 oxc_ast = ">=0.112.0"
@@ -40,7 +43,6 @@ oxc_semantic = ">=0.112.0"
 oxc_span = ">=0.112.0"
 oxc_syntax = ">=0.112.0"
 
-criterion = "0.8.2"
 memchr = "2.7.6"
 regex = "1.12.3"
 vue-compiler-core = "0.1.0"
