--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -16,6 +16,8 @@ harness = false
 
 [dev-dependencies]
 criterion = { workspace = true }
+oxc_allocator = { workspace = true }
+vue_oxc_toolkit = { workspace = true }
 
 [lints]
 workspace = true
