--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["crates/*"]
+members = ["benchmark", "crates/*"]
 
 [workspace.package]
 version = "0.6.0"
@@ -28,7 +28,10 @@ cast_possible_truncation = { level = "allow" }
 too_many_lines = { level = "allow" }
 
 [workspace.dependencies]
+criterion = "0.8.2"
 insta = "1.46.3"
+
+vue_oxc_toolkit = { path = "crates/vue_oxc_toolkit" }
 
 oxc_allocator = ">=0.112.0"
 oxc_ast = ">=0.112.0"
@@ -36,7 +39,6 @@ oxc_ast_visit = ">=0.112.0"
 oxc_codegen = ">=0.112.0"
 oxc_diagnostics = ">=0.112.0"
 oxc_parser = ">=0.112.0"
-oxc_semantic = ">=0.112.0"
 oxc_span = ">=0.112.0"
 oxc_syntax = ">=0.112.0"
 
