--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -6,6 +6,7 @@ categories.workspace = true
 edition.workspace = true
 keywords.workspace = true
 license.workspace = true
+publish = false
 repository.workspace = true
 rust-version.workspace = true
 description.workspace = true
